--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ main{
 
 .mensaje{
     background: white;
-    background-image: url(/imagenes/mensajecifrado.jpg);
+    background-image: url(./imagenes/mensajecifrado.jpg);
     background-size: 100%;
     background-position: center;
     background-repeat: no-repeat;
